Update to reflect new distances.

--- a/docs/manual.bib
+++ b/docs/manual.bib
@@ -444,3 +444,115 @@ J. L. Marroquin},
   pages={1--8},
   year={2011}
 }
+
+
+@PHDTHESIS{Beecks:2013, 
+ author = {Beecks, Christian},
+ title = {Distance based similarity models for content based multimedia retrieval},
+ publisher = {RWTH Aachen University},
+ year = {2013},
+}
+
+@inproceedings{Beecks:2010,
+ author = {Beecks, Christian and Uysal, Merih Seran and Seidl, Thomas},
+ title = {Signature Quadratic Form Distance},
+ booktitle = {Proceedings of the ACM International Conference on Image and Video Retrieval},
+ series = {CIVR '10},
+ year = {2010},
+ isbn = {978-1-4503-0117-6},
+ location = {Xi'an, China},
+ pages = {438--445},
+ numpages = {8},
+ url = {http://doi.acm.org/10.1145/1816041.1816105}, 
+ doi = {10.1145/1816041.1816105}, 
+ acmid = {1816105},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {Signature Quadratic Form Distance, content-based similarity, feature signatures, multimedia information retrieval},
+}
+
+@misc{ILSVRCarxiv14,
+ Author = {Olga Russakovsky and Jia Deng and Hao Su and Jonathan Krause and Sanjeev Satheesh and Sean Ma and Zhiheng Huang and Andrej Karpathy and Aditya Khosla and Michael Bernstein and Alexander C. Berg and Li Fei-Fei},
+ Title = {{ImageNet Large Scale Visual Recognition Challenge}},
+ Year = {2014},
+ url = {http://image-net.org/challenges/LSVRC/2014/},
+}
+
+@ARTICLE{Levenshtein:1966,
+  AUTHOR = {V. Levenshtein},
+  TITLE = {Binary codes capable of correcting deletions, insertions, and reversals},
+  JOURNAL = {Doklady Akademii Nauk SSSR,},
+  VOLUME = {163},
+  NUMBER = {4},
+  PAGES = {845-848},
+  YEAR = {1966} 
+}
+
+@article{Sankoff:2000,
+ author = {D. Sankoff},
+ title =  {The Early Introduction of Dynamic Programming into Computational Biology},
+ journal = {Bioinformatics},
+ volume = {16},
+ number = {1},
+ pages  = {41-47},
+ year  =  {2000},
+}
+
+@article{Vintsyuk:1968,
+ author = {T.K. Vintsyuk},
+ title =  {Speech Discrimination by Dynamic Programming},
+ journal = {Cybernetics},
+ volume = {4},
+ number = {1},
+ pages  = {52-57},
+ year= {1968}
+}
+@article{Velichko_and_Zagoruyko:1970,
+title = "Automatic recognition of 200 words",
+journal = "International Journal of Man-Machine Studies",
+volume = "2",
+number = "3",
+pages = "223 - 234",
+year = "1970",
+author = "V.M. Velichko and N.G. Zagoruyko"
+}
+@INPROCEEDINGS{Sakoe_and_Chiba:1971,
+  AUTHOR = {H. Sakoe and S. Chiba},
+  TITLE = {A dynamic programming approach to continuous speech recognition},
+  BOOKTITLE = {Proceedings of the Seventh International Congress on Acoustics},
+  YEAR = {1971},
+  PUBLISHER = {},
+    pages = {65-68},
+  LOCATION = {Budapset, Hungary},
+    note = {paper 20C13},
+  MONTH = {August}
+}
+
+
+@article{Needleman_and_Wunsch:1970,
+  author = {S. B. Needleman  and C. D. Wunsch  },
+  journal = {J Mol Biol},
+  month = {March},
+  number = {3},
+  pages = {443--453},
+  title = {A general method applicable to the search for similarities in the amino acid sequence of two proteins.},
+  url = {http://view.ncbi.nlm.nih.gov/pubmed/5420325},
+  volume = {48},
+  year = {1970}
+}
+
+@ARTICLE{Wagner_and_Fischer:1974,
+ author = {Wagner, Robert A. and Fischer, Michael J.},
+ title = {The String-to-String Correction Problem},
+ journal = {Journal of the ACM},
+ volume = {21},
+ number = {1},
+ year = {1974},
+ issn = {0004-5411},
+ pages = {168--173},
+ doi = {http://doi.acm.org/10.1145/321796.321811},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ }
+
+
