--- a/docs/manual.tex
+++ b/docs/manual.tex
@@ -23,8 +23,10 @@
 \newcommand{\todonote}[1]{\todo[color=red!40,caption={TODO}]{#1}}
 
 \newcommand{\nonmetrlib}{Non-Metric Space Library}
-\newcommand{\replocdir}{https://github.com/searchivarius/NonMetricSpaceLib/tree/master/}
-\newcommand{\replocfile}{https://github.com/searchivarius/NonMetricSpaceLib/blob/master/}
+%\newcommand{\replocdir}{https://github.com/searchivarius/NonMetricSpaceLib/tree/master/}
+%\newcommand{\replocfile}{https://github.com/searchivarius/NonMetricSpaceLib/blob/master/}
+\newcommand{\replocdir}{https://github.com/searchivarius/NonMetricSpaceLib/tree/develop}
+\newcommand{\replocfile}{https://github.com/searchivarius/NonMetricSpaceLib/blob/develop/}
 \newcommand{\ttt}[1]{\texttt{#1}}
 \newcommand{\knn}{$k$-NN }
 \newcommand{\knnns}{$k$-NN}
@@ -1054,11 +1056,15 @@ Yet, it seems to be unavoidable, because, in many cases,
 we need separate indices to support left and right queries \cite{Cayton2008}.
 If you know a better approach, feel free, to tell us.
 
+\subsection{Details of Distance Efficiency Evaluation}\label{SectionDistEvalDetails}
 Distance computation efficiency was evaluated on a Core i7 laptop (3.4 Ghz peak frequency)
 in a single-threaded mode (by the utility \href{\replocfile similarity_search/test/bench_distfunc.cc}{bench\_distfunc}).
 It is measured in millions of computations per second for single-precision
 floating pointer numbers (double precision computations are, of course, more costly). 
 The code was compiled using the GNU compiler. 
+All data sets were small enough to fit in a CPU cache, which may have resulted in slightly more optimistic
+performance numbers for cheap distances such as $L_2$.
+
 Somewhat higher efficiency numbers can be obtained by using the Intel compiler
 or the Visual Studio (Clang seems to be equally efficient to the GNU compiler).
 In fact, performance is much better for distances relying on ``heavy'' math functions:
@@ -1070,7 +1076,7 @@ In the efficiency test, all dense vectors have 128 elements.
 For all dense-vector distances except the Jensen-Shannon divergence,
 their elements were generated randomly and uniformly.
 For the Jensen-Shannon divergence, we first generate elements randomly,
-and next we randomly select elements that are set to zero (approximately half). 
+and next we randomly select elements that are set to zero (approximately half of all elements). 
 Additionally, for KL-divergences and the JS-divergence,
 we normalize vector elements so that they correspond a true discrete probability distribution. 
 
@@ -1081,6 +1087,21 @@ Sparse vectors in
 and
 \href{\replocfile sample_data/sparse_wiki_5K.txt}{the second file} on average contain
 about 100 and 600 non-zero elements, respectively.
+
+String distances were tested using \href{\replocfile sample_data/dna32_4_5K.txt}{DNA sequences} sampled from a human genome.\footnote{\url{http://hgdownload.cse.ucsc.edu/goldenPath/hg38/bigZips/}}
+The length of each string was sampled from a normal distribution $\mathcal{N}(32,4)$. 
+
+The Signature Quadratic Form Distance (SQFD) \cite{Beecks:2010,Beecks:2013} was tested 
+using signatures extracted from LSVRC-2014 data set~\cite{ILSVRCarxiv14}, 
+which contains 1.2 million high resolution images.
+We implemented \href{\replocfile data/data\_conv/sqfd}{our own code} to extract signatures following the method of Beecks~\cite{Beecks:2013}.
+For each image, we selected $10^4$ pixels randomly and
+mapped them into 7-dimensional feature space:
+three color, two position, and two texture dimensions.
+The features were clustered by the standard $k$-means algorithm with 20 clusters.
+Then, each cluster was represented by an 8-dimensional vector, which included
+a 7-dimensional centroid and a cluster weight (the number of cluster points divided
+by $10^4$).
 
 \begin{table}
 \caption{Description of implemented spaces\label{TableSpaces}}
@@ -1112,6 +1133,11 @@ Angular distance & \ttt{angulardist}, \ttt{angulardist\_sparse}, \ttt{angulardis
 \cmidrule(l){1-3} 
 Jensen-Shan. metr. &\ttt{jsmetrslow, jsmetrfast, jsmetrfastapprox} &  0.3, 1.9, 4.8  \\
                           & $\sqrt{\frac{1}{2}\sum_{i=1}^n \left[x_i \log x_i + y_i \log y_i  - (x_i+y_i)\log \frac{x_i +y_i}{2}\right]}$  & \vspace{1em} \\
+\cmidrule(l){1-3} 
+Levenshtein       &\ttt{leven} (see \S~\ref{SectionEditDistance} for details) & 0.2 \\
+\cmidrule(l){1-3} 
+SQFD              & \ttt{sqfd\_minus\_func}, \ttt{sqfd\_heuristic\_func:alpha=\ldots}, & 0.05, 0.05, 0.03 \\
+                  &  \ttt{sqfd\_gaussian\_func:alpha=\ldots} (see \S~\ref{SectionSQFD} for details) & \\
 \toprule
 \multicolumn{3}{c}{\textbf{Non-metric spaces (symmetric distance)}}  \\
 \toprule
@@ -1123,6 +1149,8 @@ Jensen-Shan. div. &\ttt{jsdivslow, jsdivfast, jsdivfastapprox} &   0.3, 1.9, 4.8
 \cmidrule(l){1-3} 
 Cosine similarity & \ttt{cosinesimil}, \ttt{cosinesimil\_sparse}, \ttt{cosinesimil\_sparse\_fast} & { 13, 1.4, 3.5 } \\
                         & $1-\frac{\sum_{i=1}^n x_i y_i}{\sqrt{\sum_{i=1}^n x_i^2}\sqrt{\sum_{i=1}^n y_i^2 }}$   & \vspace{1em} \\
+\cmidrule(l){1-3} 
+Norm. Levenshtein       &\ttt{normleven}, see \S~\ref{SectionEditDistance} for details & 0.2 \\
 \toprule
 \multicolumn{3}{c}{\textbf{Non-metric spaces (non-symmetric distance)}}  \\
 \toprule
@@ -1297,6 +1325,84 @@ $$
 Computing logarithms is costly: We can considerably improve efficiency of 
 Itakura-Saito divergence and KL-divergence by pre-computing logarithms at index time.
 The spaces that implement this functionality contain the substring \ttt{fast} in their mnemonic names (see also Table~\ref{TableSpaces}).
+
+\subsection{String Distances}\label{SectionEditDistance}
+We currently provide implementations for the Levenshtein distance and its length-normalized variant.
+The \emph{original} Levenshtein distance is equal to the minimum number of insertions, deletions, and
+substitutions (but not transpositions) required to obtain one string from another \cite{Levenshtein:1966}.
+The distance between strings $p$ and $s$ is computed using the classic $O(m \times n)$
+dynamic programming solution, where $m$ and $n$ are lengths of strings $p$ and $s$, respectively. 
+The \emph{normalized} Levenshtein distance is obtained by dividing the original Levenshtein distance by
+the maximum of string lengths. If both strings are empty, the distance is equal to zero.
+
+While the original Levenshtein distance is a metric distance, the normalized Levenshtein function is not,
+because the triangle inequality may not hold.
+In practice, when there is little variance in string length, 
+the violation of the triangle inequality is infrequent and, thus, the normalized Levenshtein distance
+is approximately metric for many real data sets.
+
+
+Technically, the classic Levenshtein distance is equal to $C_{n,m}$, where $C_{i,j}$ is computed via the classic recursion:
+\begin{equation} \label{EqLeven}
+\hspace{-5em}C_{i,j} =\min \left\{\begin{array}{ll} 
+0 ,                 & \mbox{ if } i =  j = 0 \\
+{C_{i - 1, j} +1,}  & \mbox{ if } i> 0 \\
+{C_{i,j-1} +1 ,  }  & \mbox{ if } j > 0 \\
+{C_{i - 1, j - 1} + \left[p_{i} \neq s_{j} \right]} ,   & \mbox{ if } i,j > 0  \\
+\end{array}
+\right.
+\end{equation}
+Because computation time is proportional to both strings' length,
+this can be a costly operation: for the sample data set described in \S~\ref{SectionDistEvalDetails}, 
+it is possible to compute only about 200K distances per second.
+
+The classic algorithm to compute the Levenshtein distance was independently discovered by several researchers in
+various contexts, including speech recognition \cite{Vintsyuk:1968,Velichko_and_Zagoruyko:1970,Sakoe_and_Chiba:1971} and computational
+biology \cite{Needleman_and_Wunsch:1970}
+ (see Sankoff \cite{Sankoff:2000} for a historical perspective).
+Despite the early discovery, the algorithm was generally unknown
+before a publication by Wagner and Fischer \cite{Wagner_and_Fischer:1974} in a computer science journal.
+
+\subsection{Signature Quadratic Form Distance (SQFD)}\label{SectionSQFD}
+Images can be compared using a \emph{family} of metric functions called  the
+Signature Quadratic Form Distance (SQFD).
+During the preprocessing stage, each image is converted to a set of $n$ signatures (the number of signatures $n$ is a parameter).
+To this end, a fixed number of pixels is randomly selected.
+Then, each pixel is represented by a 7-dimensional vector with the following components:
+three color, two position, and two texture elements.
+These 7-dimensional vectors are clustered by the standard $k$-means algorithm with $n$ centers.
+Finally, each cluster is represented by an 8-dimensional vector, called \emph{signature}.
+A signature includes a 7-dimensional centroid and a cluster weight (the number
+of cluster points divided by the total number of randomly selected pixels).
+Cluster weights form a \emph{signature histogram}.
+ 
+The SQFD is computed as a quadratic form applied to a $2n$-dimensional vector constructed
+by combining images' signature histograms. 
+The combination vector includes
+$n$ unmodified signature histogram values of the first image 
+followed by $n$ negated signature histogram values of the second image. 
+Unlike the classic quadratic form distance, where the quadratic form matrix is fixed,
+in the case of the SQFD, the matrix is re-computed for each pair of images.
+This can be seen as computing the quadratic form distance between infinite-dimensional vectors
+each of which has only a finite number of non-zero elements.
+
+To compute the quadratic form matrix, we introduce the new global enumeration of signatures,
+in which a signature $k$ from the first image has number $k$, while
+the signature $k$ from the second image has number $n+k$.
+To obtain a quadratic form matrix element in row $i$ column $j$ 
+we first compute the Euclidean distance $d$ between the $i$-th and the $j$-th signature.
+Then, the value $d$ is transformed using one of the three functions:
+negation (the \emph{minus} function $-d$), a \emph{heuristic} function $\frac{1}{\alpha + d}$,
+and the \emph{Gaussian} function $\exp(-\alpha d^2)$.
+The larger is the distance, the smaller is the coefficient in the matrix of the quadratic form.
+
+Note that the SQFD is a family of distances parameterized by the choice of the transformation
+function and $\alpha$.
+For further details, please, see the thesis of Beecks~\cite{Beecks:2013}.
+
+
+
+
 
 
 \section{Search Methods}\label{SectionMethods}
@@ -2951,7 +3057,7 @@ The Colors data set originally belongs to the Metric Spaces Library:
 } 
 \end{verbatim}
 
-The Wikipedia data sets were created with a help of the \href{https://github.com/piskvorky/gensim/}{\ttt{gensim} library}:
+All Wikipedia-based data sets were created with a help of the \href{https://github.com/piskvorky/gensim/}{\ttt{gensim} library}:
 
 \begin{verbatim}
 @inproceedings{rehurek_lrec,
@@ -2971,7 +3077,7 @@ The Wikipedia data sets were created with a help of the \href{https://github.com
 }
 \end{verbatim}
 
-Last, but not least, our library incorporates the efficient LSHKIT library.
+Our library incorporates the efficient LSHKIT library.
 Note that is is distributed under a different license: 
 GNU General Public License version 3 or later. 
 
@@ -2999,6 +3105,10 @@ If you (re)-use it, please, consider citing the authors:
 } 
 \end{verbatim}
 
+\todonoteinline{Make these references just references + add a reference to NN-descent}
+
+\todonoteinline{Wei Dong, Charikar Moses, and Kai Li. 2011. Efficient k-nearest neighbor graph construction for generic similarity measures. In Proceedings of the 20th international conference on World wide web (WWW '11). ACM, New York, NY, USA, 577-586.}
+
 \label{SectionCredits}
 
 \section{Acknowledgements}
@@ -3008,7 +3118,7 @@ Nikita Avrelin for implementing the first version of the \knn graph,
 and Daniel Lemire for contributing 
 the implementation of the original Schlegel~et~al.~\cite{schlegel2011fast}
 intersection algorithm.
-We also thank Andrey Savchenko, Alexander Ponomarenko,
+We also thank Andrey Savchenko, Alexander Ponomarenko, Yury Malkov,
 and anonymous referees for suggestions
 to improve the library and the documentation.
 
