finished with proximity graphs

--- a/docs/manual.bib
+++ b/docs/manual.bib
@@ -143,6 +143,15 @@
   publisher={JSTOR}
 }
 
+@inproceedings{dong2011efficient,
+  title={Efficient k-nearest neighbor graph construction for generic similarity measures},
+  author={Dong, Wei and Moses, Charikar and Li, Kai},
+  booktitle={Proceedings of the 20th international conference on World wide web},
+  pages={577--586},
+  year={2011},
+  organization={ACM}
+}
+
 @inproceedings{Dong_et_al:2008,
  author = {Dong, Wei and Wang, Zhe and Josephson, William and Charikar, Moses and Li, Kai},
  title = {Modeling LSH for performance tuning},
@@ -428,7 +437,6 @@ J. L. Marroquin},
   organization={IEEE}
 }
 
-
 @incollection{malkov2012scalable,
   title={Scalable distributed algorithm for approximate nearest neighbor search problem in high dimensional general metric spaces},
   author={Malkov, Yury and Ponomarenko, Alexander and Logvinov, Andrey and Krylov, Vladimir},
@@ -437,6 +445,26 @@ J. L. Marroquin},
   year={2012},
   publisher={Springer}
 }
+
+
+@article{malkov2014,
+  author    = {Yury Malkov and
+               Alexander Ponomarenko and
+               Andrey Logvinov and
+               Vladimir Krylov},
+  title     = {Approximate nearest neighbor algorithm based on navigable small world
+               graphs},
+  journal   = {Inf. Syst.},
+  volume    = {45},
+  pages     = {61--68},
+  year      = {2014},
+  url       = {http://dx.doi.org/10.1016/j.is.2013.10.006},
+  doi       = {10.1016/j.is.2013.10.006},
+  timestamp = {Tue, 17 Jun 2014 09:37:31 +0200},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/is/MalkovPLK14},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
 @inproceedings{schlegel2011fast,
   title={Fast Sorted-Set Intersection using SIMD Instructions.},
   author={Schlegel, Benjamin and Willhalm, Thomas and Lehner, Wolfgang},
@@ -555,4 +583,28 @@ author = "V.M. Velichko and N.G. Zagoruyko"
  address = {New York, NY, USA},
  }
 
+@inproceedings{bingham2001random,
+  title={Random projection in dimensionality reduction: applications to image and text data},
+  author={Bingham, Ella and Mannila, Heikki},
+  booktitle={Proceedings of the seventh ACM SIGKDD international conference on Knowledge discovery and data mining},
+  pages={245--250},
+  year={2001},
+  organization={ACM}
+}
 
+
+@book{faloutsos1995fastmap,
+  title={FastMap: A fast algorithm for indexing, data-mining and visualization of traditional and multimedia datasets},
+  author={Faloutsos, Christos and Lin, King-Ip},
+  volume={24},
+  number={2},
+  year={1995},
+  publisher={ACM}
+}
+
+@article{naidan2015permutation,
+  title={Permutation Search Methods are Efficient, Yet Faster Search is Possible},
+  author={Naidan, Bilegsaikhan and Boytsov, Leonid and Nyberg, Eric},
+  journal={arXiv preprint arXiv:1506.03163},
+  year={2015}
+}
